--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f019557f910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72e49def90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01952a4b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01952a4d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72e43ecc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72e43ece10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f01957fb490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f01957fb690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72e4c6b450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72e4c6b650&gt;]</pre>
 </div>
 
 </div>
