--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f72e49def90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0bb814b250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72e43ecc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72e43ece10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bb7e78e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0bb7e78fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72e4c6b450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72e4c6b650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bb86fd7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0bb86fd9d0&gt;]</pre>
 </div>
 
 </div>
