--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f123dc6ad90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa874cd6250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f123d990bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f123d990dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa874a11bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa874a11dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f123dee74d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f123dee76d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa874f68550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa874f68750&gt;]</pre>
 </div>
 
 </div>
