--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa797276b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28021acc50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa796c7bc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa796c7be50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2801ec9d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2801ec9f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7971e5550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa7971e5750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28027a6e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f280275a810&gt;]</pre>
 </div>
 
 </div>
