--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8792437710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1f469d3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8792488b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8792488dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f46e3d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1f46e3f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87929f1410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87929f1650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f4c4d610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1f4c4d810&gt;]</pre>
 </div>
 
 </div>
