--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b93c559d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9661dd6710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b93fa0a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b93cb1090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9661e31bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9661e31dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b9421f710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8b93c4f8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f966239b4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f966239b6d0&gt;]</pre>
 </div>
 
 </div>
