--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc8ab9acd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7da1bfbd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc8a592c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc8a592e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7da1ee3050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7da1ee3250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc8ae1f550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc8ae1f750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7da24d9810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7da2483b10&gt;]</pre>
 </div>
 
 </div>
