--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42cddf33d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc25c6c5490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42cde38e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42cde220d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc25c3e2c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc25c3e2e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42ce3a1690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42ce3a1890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc25c94a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc25c94a750&gt;]</pre>
 </div>
 
 </div>
