--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc25c6c5490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33a4eda2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc25c3e2c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc25c3e2e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33a4c00ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33a4c00cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc25c94a510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc25c94a750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f33a516a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f33a516a610&gt;]</pre>
 </div>
 
 </div>
