--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d939f0390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6585e52390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d933e1950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d933d6e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6585850650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6585b63ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d93c5d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d93c69850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6586102f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f65860ce6d0&gt;]</pre>
 </div>
 
 </div>
