--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0d7b4c350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a9d57b990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0d788abd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0d788add0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a9cf74e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a9cf840d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0d811b490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0d811b690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a9d7fc750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a9d7fc950&gt;]</pre>
 </div>
 
 </div>
