--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9cc799890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb987ac5fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9cc4b9c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9cc4b9e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9874c6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb9874c6d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9ccd4a590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9ccd4a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb987d57490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb987d57690&gt;]</pre>
 </div>
 
 </div>
