--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f068c7228d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fa203c190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f068c437c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f068c437e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fa203c150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7fa1a3ae50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f068c9a1550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f068c9a1750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fa22fd4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7fa22ca750&gt;]</pre>
 </div>
 
 </div>
