--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25758f4d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2351a57c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25752e1a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25752e1c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2351776c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2351776e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2575b772d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2575b774d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23520065d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2352006790&gt;]</pre>
 </div>
 
 </div>
