--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda81395b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa17d1dd1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda810cad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda813f13d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa17d22ecd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa17d22ef10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda81634610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda81686790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa17d1c3090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa17d7987d0&gt;]</pre>
 </div>
 
 </div>
