--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c58bb3d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a009e1690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c588dbb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c588dbd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a00723b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a00723d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c58e43450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7c58e43650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a00fb44d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2a00fb46d0&gt;]</pre>
 </div>
 
 </div>
