--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7360f94e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f538d662050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7360c9eb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7360c9ed90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f538d083bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f538d083dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7361539490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7361539690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f538d9154d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f538d9156d0&gt;]</pre>
 </div>
 
 </div>
