--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef2fdc3ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1b61ba650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef2fae2c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef2fae2e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b651a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b6515d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef30372590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef30372790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b674f250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b675b6d0&gt;]</pre>
 </div>
 
 </div>
